--- a/infrastructure/production/notifications/values.yaml
+++ b/infrastructure/production/notifications/values.yaml
@@ -1,2 +1,2 @@
 provider:
-  url: https://my-api-url.execute-api.us-west-2.amazonaws.com
+  url: https://w0jc4jyxn4.execute-api.us-west-2.amazonaws.com/
