--- a/apps/production/s3-bucket.yaml
+++ b/apps/production/s3-bucket.yaml
@@ -1,7 +1,7 @@
 apiVersion: s3.services.k8s.aws/v1alpha1
 kind: Bucket
 metadata:
-  name: eks-gitops-workshop-s3-bucket
+  name: eks-gitops-workshop
   namespace: default
 spec:
-  name: eks-gitops-workshop-s3-bucket
+  name: eks-gitops-workshop-782550029158
